[project]
name = "enterprise-flask"
description = "Enterprise Flask reference application"
license = { text = "MIT" }
requires-python = ">=3.7"
authors = [
    {name="Nitheesh Chandra", email="nitheesh.my@gmail.com"}
]
keywords = ["flask", "enterprise", "reference"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Framework :: Flask",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development",
  "Typing :: Typed",
  # Include this classifier to prevent accidently publishing private code to PyPI.
  # https://pypi.org/classifiers/
  "Private :: Do Not Upload",
]
dependencies = [
    "click>=8.0.1",
]
dynamic = ["readme", "version"]

[project.optional-dependencies]
all = [
  "Pygments>=2.10.0",
  "black>=21.10b0",
  "coverage[toml]>=6.2",
  "darglint>=1.8.1",
  "flake8>=4.0.1",
  "flake8-bandit>=2.1.2",
  "flake8-bugbear>=21.9.2",
  "flake8-docstrings>=1.6.0",
  "flake8-rst-docstrings>=0.2.5",
  "furo>=2021.11.12",
  "isort>=5.10.1",
  "mypy>=0.930",
  "pep8-naming>=0.12.1",
  "pre-commit>=2.16.0",
  "pre-commit-hooks>=4.1.0",
  "pytest>=6.2.5",
  "pyupgrade>=2.29.1",
  "safety>=1.10.3",
  "sphinx>=4.3.2",
  "sphinx-autobuild>=2021.3.14",
  "sphinx-click>=3.0.2",
  "typeguard>=2.13.3",
  "xdoctest[colors]>=0.15.10",
  "myst-parser>=0.16.1",
]

[project.scripts]
enterprise-flask = "enterprise_flask.__main__:main"

[project.urls]
homepage = "https://github.com/nitheesh-me/enterprise-flask"
repository = "https://github.com/nitheesh-me/enterprise-flask"
documentation = "https://enterprise-flask.readthedocs.io"


[tool.black]
line-length = 88
target-version = ['py37', 'py38']
# We use preview style for formatting Black itself. If you
# want stable formatting across releases, you should keep
# this off.
preview = true

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["enterprise_flask", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
atomic = true
profile = "black"
line_length = 88

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
  { path = "README.md" },
  { path = "CHANGES.md" },
]

[tool.hatch.version]
path = "src/enterprise_flask/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = ["/profiling"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]
